Preliminary login functionality works

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <meta name="description" content="Take control of your digital music library.">
   <meta name="author" content="Mike Lapointe">
+  <%= favicon_link_tag 'favicon.ico' %>
 
 </head>
 <body>
