upload = WIP - Page gets all user saved tracks and array from that

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,6 @@
 
   <h1> Welcome to Musix. Sign in below to see your playlists.</h1>
 
-  <%= link_to 'Sign in with Spotify', '/auth/spotify' %>
+  <%= link_to('/auth/spotify') do %><%= image_tag("log_in-desktop.svg", class:"login-button") %> <% end %>
 
 </div><!-- /.container -->
