--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -4,19 +4,13 @@
 <%= render partial: 'shared/navbar', locals: {active: 'Playlists'} %>
 
 
+
 <div class="contain" >
 
+<div id="display_ajax">
+     <p>LOADING</p>
+</div>
 
-  <%= image_tag(@suser.images.first['url']) %>
-  <h1> <%= @suser.display_name %> </h1>
-
-  <ul class="playlists">
-    <% @savedArtists.each do |plist| %>
-      <li><%= plist %></li>
-    <% end %>
-  </ul>
-
-  <%= link_to( "Upload from iTunes and Add to Spotify", "/playlists/upload") %>
 
 
 </div><!-- /.container -->
