cosmetic fixes to modal and main page

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -11,9 +11,9 @@ img.login-button{
 
 div.albums{
 
-  padding-top:50px;
+  display: inline-table;
 
-  
+
   div.imagewrap{
 
     position:relative;
