--- a/app/views/shared/_albumModal.html.erb
+++ b/app/views/shared/_albumModal.html.erb
@@ -8,7 +8,7 @@
     <div class="body-right">
       <ol>
       <% track.album.tracks.each do |trk| %>
-        <li> <%=trk.name %> </li>
+        <li> <%= track.id == trk.id ? link_to(trk.name, "https://open.spotify.com/track/#{track.id}", target:"_blank", class:"active") : link_to(trk.name, "https://open.spotify.com/track/#{track.id}", target:"_blank" ) %> </li>
       <% end %>
       </ol>
     </div>
